# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_06_121508) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_08_123010) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -93,6 +93,8 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_06_121508) do
     t.datetime "updated_at", null: false
     t.string "stripe_customer_id"
     t.string "stripe_subscription_id"
+    t.datetime "expires_at"
+    t.index ["expires_at"], name: "index_subscriptions_on_expires_at"
     t.index ["user_id"], name: "index_subscriptions_on_user_id"
   end
 
